syntax = "proto3";

package swbus;

// Swbus service
service SwbusService {
    rpc StreamMessages(stream SwbusMessage) returns (stream SwbusMessage) {}
}

//
// Service path is used to identify a service uniquely.
//
// To demosntrate the usage of service path, we can use the following example with "." and "/" as the delimiter:
// - region-a.switch-cluster-a.10.0.0.1/hamgrd/dpu3/hascope/dpu
// - region-b.switch-cluster-b.10.0.0.2/hamgrd/dpu4/hascope/eni-0a1b2c3d4e5f6
// - region-c.switch-cluster-c.10.0.0.3/redis/dpu5/APPL.SOME_TABLE/some_key:some_subkey
//
// When message is routed, it will:
// - First, use the full path to find the exact match. If there is a match, route the message there.
// - If not, try again with only the service location to find the match.
// - If not, try again with only region id and cluster id to find the match.
// - If not, try again with only region id to find the match.
// - If still not, return NO_ROUTE error.
//
message ServicePath {
  // Server location
  string region_id = 10;
  string cluster_id = 20;
  string node_id = 30;

  // Service info
  string service_type = 110;
  string service_id = 120;

  // Resource info
  string resource_type = 210;
  string resource_id = 220;
}

//
// Common message header for all swbus messages.
//
message SwbusMessageHeader {
  uint32 version = 1;

  // Message info
  uint64 epoch = 10;
  uint32 flag = 20;
  uint32 ttl = 30;

  // Source and destination info
  ServicePath source = 110;
  ServicePath destination = 120;
}

//
// Common request response message.
//
enum SwbusInfraErrorType {
  SWBUS_INFRA_ERROR_TYPE_OK = 0;

  // Bad message format
  SWBUS_INFRA_ERROR_TYPE_INVALID_MESSAGE = 1;

  // No route found
  SWBUS_INFRA_ERROR_TYPE_NO_ROUTE = 2;

  // TTL expired
  SWBUS_INFRA_ERROR_TYPE_UNREACHABLE = 3;
}

message RequestResponse {
  uint64 request_epoch = 10;
  SwbusInfraErrorType error_code = 110;
  string error_message = 120;
}

//
// Register connection request
//
enum ConnectionType {
  CONNECTION_TYPE_CLIENT = 0;
  CONNECTION_TYPE_NODE = 1;
  CONNECTION_TYPE_CLUSTER = 2;
  CONNECTION_TYPE_REGIONAL = 3;
  CONNECTION_TYPE_GLOBAL = 4;
}

message UpdateConnectionInfoRequest {
  ConnectionType connection_type = 10;
}

//
// Register request messages.
//
message RegisterRequest {
  repeated ServicePath service_paths = 10;
}

message RegisterQueryRequest { }

//
// Ping request
//
message PingRequest {}

//
// Trace route request and response.
//
message TraceRouteRequest {
  string trace_id = 10;
}

message TraceRouteResponse {
  string trace_id = 10;
}

//
// Route data request
//
message RouteDataRequest {
  bytes payload = 20;
}

//
// Swbus message
//
message SwbusMessage {
  SwbusMessageHeader header = 10;

  oneof Body {
    RequestResponse response = 20;

    // Update connection info update
    UpdateConnectionInfoRequest update_connection_info_request = 110;

    // Register
    RegisterRequest register_request = 210;
    RegisterQueryRequest register_query_request = 220;

    // Ping
    PingRequest ping_request = 310;

    // Trace route
    TraceRouteRequest trace_route_request = 410;
    TraceRouteResponse trace_route_response = 420;

    // Route data
    RouteDataRequest route_data_request = 10000;
  }
}